--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="">Galeria</a>
         </nav>
         <input type="text" placeholder="Buscar imagens">
-        <img class="pfp" src="https://picsum.photos/200" alt="">
+        <img class="pfp" src="https://random.imagecdn.app/v1/image?width=500&height=325&category=profile" alt="pfp">
     </header>
 
     <div class="page">
