--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Galeria</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav>
             <img src="assets/img.png" alt="">
-            <a href="">Home</a>
+            <a href="home.html">Home</a>
             <a href="">Galeria</a>
         </nav>
-        <input type="text" placeholder="Buscar imagens">
+        <div class="search-container">
+            <img src="assets/lupa.png" alt="Search">
+            <input type="text" placeholder="Buscar imagens">
+        </div>
         <img class="pfp" src="https://random.imagecdn.app/v1/image?width=500&height=325&category=profile" alt="pfp">
     </header>
 
